--- a/result/heat_p0.1_s0.0001/hyperparameter.yaml
+++ b/result/heat_p0.1_s0.0001/hyperparameter.yaml
@@ -5,7 +5,14 @@ device: cuda:0
 dropout: 0.0
 emb_dim: 8
 epochs: 1540
+loss: mse
+lr: 1.0e-05
+lr_max: 0.001
+lr_max_mult: 0.5
 missing: 0.1
 noise: 0.0001
+period: 200
+period_mult: 1.0
 seed: 42
 threshold: null
+warmup: 20
