--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/rossler_test_ext.pkl filter=lfs diff=lfs merge=lfs -text
 data/rossler_train.pkl filter=lfs diff=lfs merge=lfs -text
+data/PEMS-BAY/pems-bay.h5 filter=lfs diff=lfs merge=lfs -text
